# NDKDemo

app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: hello-lib.c
app/src/main/java/com/example/duanlei/ndkdemo/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
ndklib/: CMakeLists.txt  build.gradle
ndklib/src/androidTest/java/com/example/ndklib/: ExampleInstrumentedTest.java
ndklib/src/main/: AndroidManifest.xml
ndklib/src/main/cpp/: hello-lib.c
ndklib/src/main/java/com/example/ndklib/: NdkTest.java
ndklib/src/test/java/com/example/ndklib/: ExampleUnitTest.java
